// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly expenses summary with 1 expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling ₹
    235
  </h2>
</div>
`;

exports[`should correctly expenses summary with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    23
     
    expenses
     totalling ₹
    2350000
  </h2>
</div>
`;
